[build-system]
requires = ["setuptools >= 61.0", "cython>=3.0.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="table_embeddings"
dependencies=[
	"Cython>=3.0.9",
	"transformers>=4.39.2",
	"numpy>=1.24.4",
	"whatthelang>=1.0.1",
	"fasttext-wheel>=0.9.2",
	"ujson>=5.9.0",
]
version="0.1.0"

[project.optional-dependencies]
full = [
	"matplotlib",
	"networkx",
	"whatthelang",
	"tldextract",
	"pandas",
	"mxnet",
	"scikit-learn",
	"xlrd==1.1.0",
	"pysqlite3",
	"dgl",
	"scipy",
	"transformers",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["table_embeddings*", "embedding*"]

